@@ -1,3 +1,8 @@
+2014-10-22  Ola Jeppsson  <ola@adapteva.com>
+	* scripts/build_and_test_all.sh:
+	Limit built examples to current working directory
+
+
 2014-10-20  Ola Jeppsson  <ola@adapteva.com>
 	* scripts/build_and_test_all.sh:
 	Yet another build/test script. This one seems to find more
